--- a/umroh/form/laboratorium.html
+++ b/umroh/form/laboratorium.html
@@ -126,7 +126,7 @@
                        <div class="form-group row">
                                <label class="col-md-4 col-form-label" for="gol-darah">Golongan Darah</label>
                                <div class="col-md-8">
-                                 <input id="gol-darah" name="gol-darah" type="number" placeholder="" class="form-control" required="">
+                                 <input id="gol-darah" name="gol-darah" type="text" placeholder="" class="form-control" required="">
                                </div>
                              </div>
 
