--- a/basic/form/costovertebra.html
+++ b/basic/form/costovertebra.html
@@ -35,12 +35,13 @@
               <input id="jantung-perkusi" name="perkusi" type="text" placeholder="" class="form-control" required="">
             </div>
           </div>
-    <div class="form-group row">
-          <label class="col-md-4 col-form-label" for="jantung-auskultasi">Auskultasi</label>
-            <div class="col-md-8">
-              <input id="jantung-auskultasi" name="jantung-auskultasi" type="text" placeholder="" class="form-control" required="">
-            </div>
-          </div>
+<div class="form-group row">
+  <label class="col-md-4 col-form-label" for="jantung-auskultasi">Auskultasi Jantung</label>
+  <div class="col-md-8">
+    <textarea id="jantung-auskultasi" name="Auskultasi Jantung" placeholder="" class="form-control" required="" rows="4"></textarea>
+  </div>
+</div>
+
 
     <h5>Pulmo</h5>
     <div class="form-group row">
