--- a/preemployee/pria/form/identitas.html
+++ b/preemployee/pria/form/identitas.html
@@ -87,7 +87,7 @@
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="paket">Paket</label>
         <div class="col-md-8">
-          <input id="paket" name="paket" type="text" placeholder="Basic" value="Basic" class="form-control" readonly>
+          <input id="paket" name="paket" type="text" placeholder="Pre-Employee Pria" value="Pre-Employee Pria" class="form-control" readonly>
         </div>
       </div>
 
