--- a/standart/form/anamnesa.html
+++ b/standart/form/anamnesa.html
@@ -29,12 +29,12 @@
       <legend></legend>
 
 
-<div class="form-group row">
-  <label class="col-md-4 col-form-label" for="keluhan">Keluhan</label>
-  <div class="col-md-8">
-    <input id="keluhan" name="keluhan" type="text" placeholder="" class="form-control" required="">
-  </div>
-</div>
+      <div class="form-group row">
+        <label class="col-md-4 col-form-label" for="keluhan">Keluhan</label>
+        <div class="col-md-8">
+          <textarea id="keluhan" name="keluhan" placeholder="" class="form-control" required="" rows="4"></textarea>
+        </div>
+      </div>
 
 <div class="form-group row">
   <label class="col-md-4 col-form-label" for="riwayatdahulu">Riwayat Penyakit Dahulu</label>
