--- a/custom/form/anamnesa.html
+++ b/custom/form/anamnesa.html
@@ -42,12 +42,12 @@
   </div>
 </div>
 
-<div class="form-group row">
-  <label class="col-md-4 col-form-label" for="riwayatkeluarga">Riwayat Penyakit Keluarga</label>
-  <div class="col-md-8">
-    <input id="riwayatkeluarga" name="riwayatkeluarga" type="text" placeholder="" class="form-control" >
-  </div>
-</div>
+        <div class="form-group row">
+          <label class="col-md-4 col-form-label" for="riwayatkeluarga">Riwayat Penyakit Keluarga</label>
+          <div class="col-md-8">
+            <textarea id="riwayatkeluarga" name="riwayatkeluarga" class="form-control" required=""></textarea>
+          </div>
+        </div>
 
 <div class="form-group row">
   <label class="col-md-4 col-form-label" for="merokok">Merokok</label>
@@ -86,15 +86,6 @@
   </div>
 </div>
 
-<div class="form-group row">
-  <label class="col-md-4 col-form-label" for="riwayatalergi">Riwayat Alergi</label>
-  <div class="col-md-8">
-    <select id="riwayatalergi" name="riwayatalergi" class="form-control">
-      <option value="ya">Ya</option>
-      <option value="tidak">Tidak</option>
-    </select>
-  </div>
-</div>
 
 <div class="form-group row">
   <label class="col-md-4 col-form-label" for="alergi">Alergi</label>
