--- a/custom/form/laboratorium.html
+++ b/custom/form/laboratorium.html
@@ -134,7 +134,7 @@
                                    </div>
                                 </div>
     <div class="form-group row">
-            <label class="col-md-4 col-form-label" for="urinalisa"><h5>Urinalisa (pH)</h5></label>
+            <label class="col-md-4 col-form-label" for="urinalisa"><h5>Urinalisa</h5></label>
               <div class="col-md-8">
                   <input id="urinalisa" name="urinalisa" type="number" placeholder="pH" class="form-control" >
                     </div>
