--- a/kartap/form/pemeriksaan-fisik.html
+++ b/kartap/form/pemeriksaan-fisik.html
@@ -133,13 +133,13 @@
           <div class="form-group row">
             <label class="col-md-4 col-form-label" for="od">OD</label>
             <div class="col-md-8">
-              <input id="od" name="od" type="text" placeholder="" class="form-control" required="">
+              <textarea id="od" name="od" class="form-control" required=""></textarea>
             </div>
           </div>
           <div class="form-group row">
             <label class="col-md-4 col-form-label" for="os">OS</label>
             <div class="col-md-8">
-              <input id="os" name="os" type="text" placeholder="" class="form-control" required="">
+              <textarea id="os" name="os" class="form-control" required=""></textarea>
             </div>
           </div>
           <div class="form-group row">
