--- a/basic/form/costovertebra.html
+++ b/basic/form/costovertebra.html
@@ -53,7 +53,7 @@
           <div class="form-group row">
            <label class="col-md-4 col-form-label" for="pulmo-auskultasi">Auskultasi</label>
               <div class="col-md-8">
-                <input id="pulmo-auskultasi" name="pulmo-auskultasi" type="text" placeholder="" class="form-control" required="">
+                <textarea id="pulmo-auskultasi" name="pulmo-auskultasi" class="form-control" required=""></textarea>
               </div>
           </div>
 
@@ -67,13 +67,13 @@
           <div class="form-group row">
            <label class="col-md-4 col-form-label" for="palpalsi">Palpalsi</label>
               <div class="col-md-8">
-                <input id="palpalsi" name="palpalsi" type="text" placeholder="" class="form-control" required="">
+                <textarea id="palpalsi" name="palpalsi" class="form-control" required=""></textarea>
               </div>
           </div>
           <div class="form-group row">
                   <label class="col-md-4 col-form-label" for="auskultasi">Auskultasi</label>
                   <div class="col-md-8">
-                    <input id="auskultasi" name="auskultasi" type="text" placeholder="" class="form-control" required="">
+                   <textarea id="auskultasi" name="auskultasi" class="form-control" required=""></textarea>
                   </div>
                 </div>
                 <div class="form-group row">
@@ -86,14 +86,14 @@
       <div class="form-group row">
                 <label class="col-md-4 col-form-label" for="ekstremitas-atas"><h5>Ekstremitas Atas</h5></label>
                   <div class="col-md-8">
-                    <input id="ekstremitas-atas" name="ekstremitas-atas" type="textarea" placeholder="" class="form-control" required="">
+                    <textarea id="ektremitas-atas" name="ekstremitas-atas" class="form-control" required=""></textarea>
                   </div>
                </div>
 
       <div class="form-group row">
                 <label class="col-md-4 col-form-label" for="ekstremitas-bawah"><h5>Ekstremitas Bawah</h5></label>
                   <div class="col-md-8">
-                    <input id="ekstremitas-bawah" name="ekstremitas-bawah" type="textarea" placeholder="" class="form-control" required="">
+                    <textarea id="ektremitas-bawah" name="ekstremitas-bawah" class="form-control" required=""></textarea>
                   </div>
                </div>
 
