--- a/preemployee/pria/form/anamnesa.html
+++ b/preemployee/pria/form/anamnesa.html
@@ -43,12 +43,12 @@
   </div>
 </div>
 
-<div class="form-group row">
-  <label class="col-md-4 col-form-label" for="riwayatkeluarga">Riwayat Penyakit Keluarga</label>
-  <div class="col-md-8">
-    <input id="riwayatkeluarga" name="riwayatkeluarga" type="text" placeholder="" class="form-control" required="">
-  </div>
-</div>
+        <div class="form-group row">
+          <label class="col-md-4 col-form-label" for="riwayatkeluarga">Riwayat Penyakit Keluarga</label>
+          <div class="col-md-8">
+            <textarea id="riwayatkeluarga" name="riwayatkeluarga" class="form-control" required=""></textarea>
+          </div>
+        </div>
 
 <div class="form-group row">
   <label class="col-md-4 col-form-label" for="merokok">Merokok</label>
@@ -146,20 +146,11 @@
 
 
 
-<div class="form-group row">
-  <label class="col-md-4 col-form-label" for="riwayatalergi">Riwayat Alergi</label>
-  <div class="col-md-8">
-    <select id="riwayatalergi" name="riwayatalergi" class="form-control">
-      <option value="ya">Ya</option>
-      <option value="tidak">Tidak</option>
-    </select>
-  </div>
-</div>
 
 <div class="form-group row">
   <label class="col-md-4 col-form-label" for="alergi">Alergi</label>
   <div class="col-md-8">
-    <input id="alergi" name="alergi" type="text" placeholder="" class="form-control">
+    <textarea id="alergi" name="alergi" class="form-control" required=""></textarea>
   </div>
 </div>
 
