--- a/custom/form/identitas.html
+++ b/custom/form/identitas.html
@@ -27,6 +27,7 @@
     <fieldset>
 
 
+
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="nama">Nama </label>
         <div class="col-md-8">
@@ -40,6 +41,24 @@
           <input id="rm" name="rm" type="text" placeholder="xx-xx-xx" class="form-control" required="">
         </div>
       </div>
+
+      <div class="form-group row">
+        <label class="col-md-4 col-form-label" for="tgl_lahir">Tanggal Lahir</label>
+        <div class="col-md-8">
+          <input id="tgl_lahir" name="tgl_lahir" type="date" placeholder="" class="form-control" required="">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label class="col-md-4 col-form-label" for="jenis_kelamin">Jenis Kelamin</label>
+        <div class="col-md-8">
+          <select id="jenis_kelamin" name="jenis_kelamin" class="form-control" required="">
+            <option value="laki-laki">Laki-laki</option>
+            <option value="perempuan">Perempuan</option>
+          </select>
+        </div>
+      </div>
+
 
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="tanggal">Tanggal Pemeriksaan</label>
@@ -73,14 +92,43 @@
       </div>
 
       <div class="form-group row">
-        <label class="col-md-4 col-form-label" for="usia">Usia (tahun)</label>
+        <label class="col-md-4 col-form-label" for="usia">Usia</label>
         <div class="col-md-8">
-          <input id="usia" name="usia" type="number" placeholder="xx" class="form-control" required="">
+          <input id="usia" name="usia" type="text" placeholder="xx tahun yy bulan" class="form-control" required="" readonly>
         </div>
       </div>
+
+      <!-- Hidden inputs to store usia_tahun and usia_bulan -->
+      <input type="hidden" id="usia_tahun" name="usia_tahun">
+      <input type="hidden" id="usia_bulan" name="usia_bulan">
+
 </fieldset>
 
+<script>
+  document.getElementById('tgl_lahir').addEventListener('change', function() {
+    var birthDate = new Date(this.value);
+    var today = new Date();
+    var ageYears = today.getFullYear() - birthDate.getFullYear();
+    var ageMonths = today.getMonth() - birthDate.getMonth();
 
+    if (ageMonths < 0 || (ageMonths === 0 && today.getDate() < birthDate.getDate())) {
+      ageYears--;
+      ageMonths += 12;
+    }
+
+    if (today.getDate() < birthDate.getDate()) {
+      ageMonths--;
+      if (ageMonths < 0) {
+        ageMonths = 11;
+        ageYears--;
+      }
+    }
+
+    document.getElementById('usia').value = ageYears + " tahun " + ageMonths + " bulan";
+    document.getElementById('usia_tahun').value = ageYears;
+    document.getElementById('usia_bulan').value = ageMonths;
+  });
+</script>
 
 </body>
 </html>
