--- a/custom/form/pemeriksaan-fisik.html
+++ b/custom/form/pemeriksaan-fisik.html
@@ -25,17 +25,19 @@
 
   <form class="form-horizontal" method="post">
 <fieldset>
+
+</div>
 <h5>Antropometri</h5>
 <div class="form-group row">
-        <label class="col-md-4 col-form-label" for="berat_badan">Berat Badan(kg)</label>
+        <label class="col-md-4 col-form-label" for="berat_badan">Berat Badan</label>
         <div class="col-md-8">
-          <input id="berat_badan" name="berat_badan" type="number" placeholder="" class="form-control" >
+          <input id="berat_badan" name="berat_badan" type="number" placeholder="kg" class="form-control" required="">
         </div>
       </div>
 <div class="form-group row">
-        <label class="col-md-4 col-form-label" for="tinggi_badan">Tinggi Badan Badan (cm)</label>
+        <label class="col-md-4 col-form-label" for="tinggi_badan">Tinggi Badan Badan</label>
         <div class="col-md-8">
-          <input id="tinggi_badan" name="tinggi_badan" type="number" placeholder="" class="form-control" >
+          <input id="tinggi_badan" name="tinggi_badan" type="number" placeholder="cm" class="form-control" required="">
         </div>
       </div>
 
@@ -58,25 +60,25 @@
 <div class="form-group row">
         <label class="col-md-4 col-form-label" for="berat_badan">Tensi(mmHg)</label>
         <div class="col-md-8">
-          <input id="tensi" name="tensi" type="text" placeholder="aa/bb" class="form-control" >
+          <input id="tensi" name="tensi" type="text" placeholder="aa/bb" class="form-control" required="">
         </div>
       </div>
 <div class="form-group row">
       <label class="col-md-4 col-form-label" for="nadi">Nadi</label>
         <div class="col-md-8">
-          <input id="nadi" name="nadi" type="number" placeholder="x/menit" class="form-control" >
+          <input id="nadi" name="nadi" type="number" placeholder="x/menit" class="form-control" required="">
         </div>
       </div>
 <div class="form-group row">
       <label class="col-md-4 col-form-label" for="respirasi">Respirasi</label>
         <div class="col-md-8">
-          <input id="respirasi" name="respirasi" type="number" placeholder="x/menit" class="form-control" >
+          <input id="respirasi" name="respirasi" type="number" placeholder="x/menit" class="form-control" required="">
         </div>
       </div>
 <div class="form-group row">
-      <label class="col-md-4 col-form-label" for="suhu">Suhu(C)</label>
+      <label class="col-md-4 col-form-label" for="suhu">Suhu</label>
         <div class="col-md-8">
-          <input id="suhu" name="suhu" type="number" placeholder="celcius" class="form-control" >
+          <input id="suhu" name="suhu" type="number" placeholder="C" class="form-control" required="">
         </div>
       </div>
       <br>
