--- a/custom/form/costovertebra.html
+++ b/custom/form/costovertebra.html
@@ -31,27 +31,28 @@
     <div class="form-group row">
             <label class="col-md-4 col-form-label" for="jantung-perkusi">Perkusi</label>
             <div class="col-md-8">
-              <input id="jantung-perkusi" name="perkusi" type="text" placeholder="" class="form-control" >
+              <input id="jantung-perkusi" name="perkusi" type="text" placeholder="" class="form-control" required="">
             </div>
           </div>
-    <div class="form-group row">
-          <label class="col-md-4 col-form-label" for="jantung-auskultasi">Auskultasi</label>
-            <div class="col-md-8">
-              <input id="jantung-auskultasi" name="jantung-auskultasi" type="text" placeholder="" class="form-control" >
-            </div>
-          </div>
+<div class="form-group row">
+  <label class="col-md-4 col-form-label" for="jantung-auskultasi">Auskultasi Jantung</label>
+  <div class="col-md-8">
+    <textarea id="jantung-auskultasi" name="Auskultasi Jantung" placeholder="" class="form-control" required="" rows="4"></textarea>
+  </div>
+</div>
+
 
     <h5>Pulmo</h5>
     <div class="form-group row">
             <label class="col-md-4 col-form-label" for="pulmo-perkusi">Perkusi</label>
             <div class="col-md-8">
-              <input id="pulmo-perkusi" name="pulmo-perkusi" type="text" placeholder="" class="form-control" >
+              <input id="pulmo-perkusi" name="pulmo-perkusi" type="text" placeholder="" class="form-control" required="">
             </div>
           </div>
           <div class="form-group row">
            <label class="col-md-4 col-form-label" for="pulmo-auskultasi">Auskultasi</label>
               <div class="col-md-8">
-                <input id="pulmo-auskultasi" name="pulmo-auskultasi" type="text" placeholder="" class="form-control" >
+                <textarea id="pulmo-auskultasi" name="pulmo-auskultasi" class="form-control" required=""></textarea>
               </div>
           </div>
 
@@ -59,39 +60,39 @@
     <div class="form-group row">
             <label class="col-md-4 col-form-label" for="inspeksi">Inspeksi</label>
             <div class="col-md-8">
-              <input id="inspeksi" name="inspeksi" type="text" placeholder="" class="form-control" >
+              <input id="inspeksi" name="inspeksi" type="text" placeholder="" class="form-control" required="">
             </div>
           </div>
           <div class="form-group row">
            <label class="col-md-4 col-form-label" for="palpalsi">Palpalsi</label>
               <div class="col-md-8">
-                <input id="palpalsi" name="palpalsi" type="text" placeholder="" class="form-control" >
+                <textarea id="palpalsi" name="palpalsi" class="form-control" required=""></textarea>
               </div>
           </div>
           <div class="form-group row">
                   <label class="col-md-4 col-form-label" for="auskultasi">Auskultasi</label>
                   <div class="col-md-8">
-                    <input id="auskultasi" name="auskultasi" type="text" placeholder="" class="form-control" >
+                   <textarea id="auskultasi" name="auskultasi" class="form-control" required=""></textarea>
                   </div>
                 </div>
                 <div class="form-group row">
                  <label class="col-md-4 col-form-label" for="ginjal">Ginjal</label>
                     <div class="col-md-8">
-                      <input id="ginjal" name="ginjal" type="text" placeholder="" class="form-control" >
+                      <input id="ginjal" name="ginjal" type="text" placeholder="" class="form-control" required="">
                     </div>
                 </div>
 
       <div class="form-group row">
                 <label class="col-md-4 col-form-label" for="ekstremitas-atas"><h5>Ekstremitas Atas</h5></label>
                   <div class="col-md-8">
-                    <input id="ekstremitas-atas" name="ekstremitas-atas" type="textarea" placeholder="" class="form-control" >
+                    <textarea id="ektremitas-atas" name="ekstremitas-atas" class="form-control" required=""></textarea>
                   </div>
                </div>
 
       <div class="form-group row">
                 <label class="col-md-4 col-form-label" for="ekstremitas-bawah"><h5>Ekstremitas Bawah</h5></label>
                   <div class="col-md-8">
-                    <input id="ekstremitas-bawah" name="ekstremitas-bawah" type="textarea" placeholder="" class="form-control" >
+                    <textarea id="ektremitas-bawah" name="ekstremitas-bawah" class="form-control" required=""></textarea>
                   </div>
                </div>
 
@@ -99,13 +100,13 @@
                <div class="form-group row">
                        <label class="col-md-4 col-form-label" for="tumor">Tumor</label>
                        <div class="col-md-8">
-                         <input id="tumor" name="tumor" type="text" placeholder="" class="form-control" >
+                         <input id="tumor" name="tumor" type="text" placeholder="" class="form-control" required="">
                        </div>
                      </div>
                      <div class="form-group row">
                       <label class="col-md-4 col-form-label" for="kelainan-kulit">Kelainan Kulit</label>
                       <div class="col-md-8">
-                        <input id="kelainan-kulit" name="kelainan-kulit" type="text" placeholder="" class="form-control" >
+                        <input id="kelainan-kulit" name="kelainan-kulit" type="text" placeholder="" class="form-control" required="">
                       </div>
                     </div>
 
