fix print layout

--- a/kartap/form/laboratorium.html
+++ b/kartap/form/laboratorium.html
@@ -29,9 +29,9 @@
 
     <h5>HbsAg</h5>
     <div class="form-group row">
-            <label class="col-md-4 col-form-label" for="hemoglobin">hbsag</label>
+            <label class="col-md-4 col-form-label" for="hbsag">hbsag</label>
             <div class="col-md-8">
-              <input id="hbsag" name="text" type="hbsag" placeholder="g/dl" class="form-control" required="">
+              <input id="hbsag" name="text" type="hbsag" placeholder="" class="form-control" required="">
             </div>
           </div>
 
