--- a/tambahan/form/identitas.html
+++ b/tambahan/form/identitas.html
@@ -26,6 +26,8 @@
   <form class="form-horizontal" method="POST">
     <fieldset>
 
+
+
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="nama">Nama </label>
         <div class="col-md-8">
@@ -48,18 +50,15 @@
       </div>
 
       <div class="form-group row">
-        <label class="col-md-4 col-form-label" for="j_kelamin">Jenis Kelamin</label>
+        <label class="col-md-4 col-form-label" for="jenis_kelamin">Jenis Kelamin</label>
         <div class="col-md-8">
-          <div class="form-check">
-            <input class="form-check-input" type="radio" id="j_kelamin_l" name="j_kelamin" value="Laki-laki" required>
-            <label class="form-check-label" for="j_kelamin_l">Laki-Laki</label>
-          </div><br>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" id="j_kelamin_p" name="j_kelamin" value="Perempuan" required>
-            <label class="form-check-label" for="j_kelamin_p">Perempuan</label>
-          </div>
+          <select id="jenis_kelamin" name="jenis_kelamin" class="form-control" required="">
+            <option value="laki-laki">Laki-laki</option>
+            <option value="perempuan">Perempuan</option>
+          </select>
         </div>
       </div>
+
 
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="tanggal">Tanggal Pemeriksaan</label>
@@ -88,7 +87,7 @@
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="paket">Paket</label>
         <div class="col-md-8">
-          <input id="paket" name="paket" type="text" placeholder="Basic" value="Basic" class="form-control" readonly>
+          <input id="paket" name="paket" type="text" placeholder="Standart" value="Standart" class="form-control" readonly>
         </div>
       </div>
 
@@ -103,34 +102,33 @@
       <input type="hidden" id="usia_tahun" name="usia_tahun">
       <input type="hidden" id="usia_bulan" name="usia_bulan">
 
-    </fieldset>
-  </form>
+</fieldset>
 
-  <script>
-    document.getElementById('tgl_lahir').addEventListener('change', function() {
-      var birthDate = new Date(this.value);
-      var today = new Date();
-      var ageYears = today.getFullYear() - birthDate.getFullYear();
-      var ageMonths = today.getMonth() - birthDate.getMonth();
+<script>
+  document.getElementById('tgl_lahir').addEventListener('change', function() {
+    var birthDate = new Date(this.value);
+    var today = new Date();
+    var ageYears = today.getFullYear() - birthDate.getFullYear();
+    var ageMonths = today.getMonth() - birthDate.getMonth();
 
-      if (ageMonths < 0 || (ageMonths === 0 && today.getDate() < birthDate.getDate())) {
+    if (ageMonths < 0 || (ageMonths === 0 && today.getDate() < birthDate.getDate())) {
+      ageYears--;
+      ageMonths += 12;
+    }
+
+    if (today.getDate() < birthDate.getDate()) {
+      ageMonths--;
+      if (ageMonths < 0) {
+        ageMonths = 11;
         ageYears--;
-        ageMonths += 12;
       }
+    }
 
-      if (today.getDate() < birthDate.getDate()) {
-        ageMonths--;
-        if (ageMonths < 0) {
-          ageMonths = 11;
-          ageYears--;
-        }
-      }
-
-      document.getElementById('usia').value = ageYears + " tahun " + ageMonths + " bulan";
-      document.getElementById('usia_tahun').value = ageYears;
-      document.getElementById('usia_bulan').value = ageMonths;
-    });
-  </script>
+    document.getElementById('usia').value = ageYears + " tahun " + ageMonths + " bulan";
+    document.getElementById('usia_tahun').value = ageYears;
+    document.getElementById('usia_bulan').value = ageMonths;
+  });
+</script>
 
 </body>
 </html>
