remove require for custom

--- a/custom/form/anamnesa.html
+++ b/custom/form/anamnesa.html
@@ -32,28 +32,28 @@
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="keluhan">Keluhan</label>
         <div class="col-md-8">
-          <textarea id="keluhan" name="keluhan" placeholder="" class="form-control" required="" rows="4"></textarea>
+          <textarea id="keluhan" name="keluhan" placeholder="" class="form-control"  rows="4"></textarea>
         </div>
       </div>
 
 <div class="form-group row">
   <label class="col-md-4 col-form-label" for="riwayatdahulu">Riwayat Penyakit Dahulu</label>
   <div class="col-md-8">
-    <input id="riwayatdahulu" name="riwayatdahulu" type="text" placeholder="" class="form-control" required="">
+    <input id="riwayatdahulu" name="riwayatdahulu" type="text" placeholder="" class="form-control" >
   </div>
 </div>
 
         <div class="form-group row">
           <label class="col-md-4 col-form-label" for="riwayatkeluarga">Riwayat Penyakit Keluarga</label>
           <div class="col-md-8">
-            <textarea id="riwayatkeluarga" name="riwayatkeluarga" class="form-control" required=""></textarea>
+            <textarea id="riwayatkeluarga" name="riwayatkeluarga" class="form-control" ></textarea>
           </div>
         </div>
 
 <div class="form-group row">
   <label class="col-md-4 col-form-label" for="merokok">Merokok</label>
   <div class="col-md-8">
-    <select id="merokok" name="merokok" class="form-control" required="">
+    <select id="merokok" name="merokok" class="form-control" >
       <option value="ya">Ya</option>
       <option value="tidak">Tidak</option>
     </select>
@@ -63,7 +63,7 @@
 <div class="form-group row">
   <label class="col-md-4 col-form-label" for="alkohol">Alkohol</label>
   <div class="col-md-8">
-    <select id="alkohol" name="alkohol" class="form-control" required="">
+    <select id="alkohol" name="alkohol" class="form-control" >
       <option value="ya">Ya</option>
       <option value="tidak">Tidak</option>
     </select>
@@ -73,7 +73,7 @@
 <div class="form-group row">
   <label class="col-md-4 col-form-label" for="obat">Obat - obatan</label>
   <div class="col-md-8">
-    <select id="obat" name="obat" class="form-control" required="">
+    <select id="obat" name="obat" class="form-control" >
       <option value="ya">Ya</option>
       <option value="tidak">Tidak</option>
     </select>
@@ -83,7 +83,7 @@
 <div class="form-group row">
   <label class="col-md-4 col-form-label" for="olahraga">Olahraga</label>
   <div class="col-md-8">
-    <select id="olahraga" name="olahraga" class="form-control" required="">
+    <select id="olahraga" name="olahraga" class="form-control" >
       <option value="jarang">Jarang</option>
       <option value="sering">Sering</option>
       <option value="rutin">Rutin</option>
@@ -151,7 +151,7 @@
 <div class="form-group row">
   <label class="col-md-4 col-form-label" for="alergi">Alergi</label>
   <div class="col-md-8">
-    <textarea id="alergi" name="alergi" class="form-control" required=""></textarea>
+    <textarea id="alergi" name="alergi" class="form-control" ></textarea>
   </div>
 </div>
 
