--- a/custom/form/laboratorium.html
+++ b/custom/form/laboratorium.html
@@ -31,137 +31,137 @@
     <div class="form-group row">
             <label class="col-md-4 col-form-label" for="hemoglobin">Hemoglobin</label>
             <div class="col-md-8">
-              <input id="hemoglobin" name="hemoglobin" type="number" placeholder="g/dl" class="form-control" required="">
+              <input id="hemoglobin" name="hemoglobin" type="number" placeholder="g/dl" class="form-control" >
             </div>
           </div>
     <div class="form-group row">
           <label class="col-md-4 col-form-label" for="hematokrit">Hematokrit</label>
             <div class="col-md-8">
-              <input id="hematokrit" name="hematokrit" type="number" placeholder="%" class="form-control" required="">
+              <input id="hematokrit" name="hematokrit" type="number" placeholder="%" class="form-control" >
             </div>
           </div>
     <div class="form-group row">
             <label class="col-md-4 col-form-label" for="trombosit">Trombosit</label>
             <div class="col-md-8">
-              <input id="trombosit" name="trombosit" type="number" placeholder="µL" class="form-control" required="">
+              <input id="trombosit" name="trombosit" type="number" placeholder="µL" class="form-control" >
             </div>
           </div>
     <div class="form-group row">
           <label class="col-md-4 col-form-label" for="leukosit">Leukosit</label>
             <div class="col-md-8">
-              <input id="leukosit" name="leukosit" type="number" placeholder="µL" class="form-control" required="">
+              <input id="leukosit" name="leukosit" type="number" placeholder="µL" class="form-control" >
             </div>
           </div>
           <div class="form-group row">
             <label class="col-md-4 col-form-label" for="led">LED</label>
             <div class="col-md-8">
-              <input id="led" name="led" type="number" placeholder="mm/jam" class="form-control" required="">
+              <input id="led" name="led" type="number" placeholder="mm/jam" class="form-control" >
             </div>
           </div>
     <div class="form-group row">
           <label class="col-md-4 col-form-label" for="eritrosit">Eritrosit</label>
             <div class="col-md-8">
-              <input id="eritrosit" name="eritrosit" type="number" placeholder="" class="form-control" required="">
+              <input id="eritrosit" name="eritrosit" type="number" placeholder="" class="form-control" >
             </div>
           </div>
     <div class="form-group row">
             <label class="col-md-4 col-form-label" for="hitung-jenis">Hitung Jenis</label>
             <div class="col-md-8">
-              <input id="hitung-jenis" name="hitung-jenis" type="number" placeholder="µL" class="form-control" required="">
+              <input id="hitung-jenis" name="hitung-jenis" type="number" placeholder="µL" class="form-control" >
             </div>
           </div>
     <div class="form-group row">
           <label class="col-md-4 col-form-label" for="MCV">MCV</label>
             <div class="col-md-8">
-              <input id="MCV" name="MCV" type="number" placeholder="fl" class="form-control" required="">
+              <input id="MCV" name="MCV" type="number" placeholder="fl" class="form-control" >
             </div>
           </div>
     <div class="form-group row">
             <label class="col-md-4 col-form-label" for="MCH">MCH</label>
               <div class="col-md-8">
-                <input id="MCH" name="MCH" type="number" placeholder="pg" class="form-control" required="">
+                <input id="MCH" name="MCH" type="number" placeholder="pg" class="form-control" >
               </div>
             </div>
     <h5>Fungsi Hati</h5>
             <div class="form-group row">
               <label class="col-md-4 col-form-label" for="sgot">SGOT</label>
                <div class="col-md-8">
-                 <input id="sgot" name="sgot" type="number" placeholder="U/L" class="form-control" required="">
+                 <input id="sgot" name="sgot" type="number" placeholder="U/L" class="form-control" >
                </div>
             </div>
             <div class="form-group row">
                   <label class="col-md-4 col-form-label" for="sgpt">SGPT</label>
                     <div class="col-md-8">
-                      <input id="sgpt" name="sgpt" type="number" placeholder="" class="form-control" required="">
+                      <input id="sgpt" name="sgpt" type="number" placeholder="" class="form-control" >
                     </div>
                   </div>
                   <div class="form-group row">
                     <label class="col-md-4 col-form-label" for="kolesterol">Kolesterol Total</label>
                      <div class="col-md-8">
-                       <input id="kolesterol" name="kolesterol" type="number" placeholder="mg/dl" class="form-control" required="">
+                       <input id="kolesterol" name="kolesterol" type="number" placeholder="mg/dl" class="form-control" >
                      </div>
                   </div>
                   <div class="form-group row">
                         <label class="col-md-4 col-form-label" for="hdl">Kolesterol HDL</label>
                           <div class="col-md-8">
-                            <input id="hdl" name="hdl" type="number" placeholder="" class="form-control" required="">
+                            <input id="hdl" name="hdl" type="number" placeholder="" class="form-control" >
                           </div>
                         </div>
                         <div class="form-group row">
                           <label class="col-md-4 col-form-label" for="ldl">Kolesterol LDL</label>
                            <div class="col-md-8">
-                             <input id="ldl" name="ldl" type="number" placeholder="mg/dl" class="form-control" required="">
+                             <input id="ldl" name="ldl" type="number" placeholder="mg/dl" class="form-control" >
                            </div>
                         </div>
                         <div class="form-group row">
                               <label class="col-md-4 col-form-label" for="tg">Trigliserida</label>
                                 <div class="col-md-8">
-                                  <input id="tg" name="tg" type="number" placeholder="mg/dl" class="form-control" required="">
+                                  <input id="tg" name="tg" type="number" placeholder="mg/dl" class="form-control" >
                                 </div>
                               </div>
       <h5>Fungsi Ginjal</h5>
             <div class="form-group row">
                 <label class="col-md-4 col-form-label" for="asam-urat">Asam Urat</label>
                      <div class="col-md-8">
-                       <input id="asam-urat" name="asam-urat" type="number" placeholder="mg/dl" class="form-control" required="">
+                       <input id="asam-urat" name="asam-urat" type="number" placeholder="mg/dl" class="form-control" >
                      </div>
                   </div>
                   <div class="form-group row">
                         <label class="col-md-4 col-form-label" for="ureum">Ureum</label>
                           <div class="col-md-8">
-                            <input id="ureum" name="ureum" type="number" placeholder="" class="form-control" required="">
+                            <input id="ureum" name="ureum" type="number" placeholder="" class="form-control" >
                           </div>
                         </div>
                         <div class="form-group row">
                           <label class="col-md-4 col-form-label" for="creatin">Creatin</label>
                             <div class="col-md-8">
-                              <input id="creatin" name="creatin" type="number" placeholder="" class="form-control" required="">
+                              <input id="creatin" name="creatin" type="number" placeholder="" class="form-control" >
                             </div>
                           </div>
       <h5>Gula Darah</h5>
                           <div class="form-group row">
                             <label class="col-md-4 col-form-label" for="glucosa-puasa">Glucosa Puasa</label>
                              <div class="col-md-8">
-                               <input id="glucosa-puasa" name="glucosa-puasa" type="number" placeholder="" class="form-control" required="">
+                               <input id="glucosa-puasa" name="glucosa-puasa" type="number" placeholder="" class="form-control" >
                              </div>
                           </div>
                           <div class="form-group row">
                                 <label class="col-md-4 col-form-label" for="glucosa-pp">Glucosa 2 Jam PP</label>
                                   <div class="col-md-8">
-                                    <input id="glucosa-pp" name="glucosa-pp" type="number" placeholder="" class="form-control" required="">
+                                    <input id="glucosa-pp" name="glucosa-pp" type="number" placeholder="" class="form-control" >
                                   </div>
                                 </div>
                                 <h5>Imunoserologi Hepatitis</h5>
                                 <div class="form-group row">
                                   <label class="col-md-4 col-form-label" for="hbsag">HBsAg</label>
                                    <div class="col-md-8">
-                                     <input id="hbsag" name="hbsag" type="text" placeholder="" class="form-control" required="">
+                                     <input id="hbsag" name="hbsag" type="text" placeholder="" class="form-control" >
                                    </div>
                                 </div>
     <div class="form-group row">
             <label class="col-md-4 col-form-label" for="urinalisa"><h5>Urinalisa</h5></label>
               <div class="col-md-8">
-                  <input id="urinalisa" name="urinalisa" type="number" placeholder="pH" class="form-control" required="">
+                  <input id="urinalisa" name="urinalisa" type="number" placeholder="pH" class="form-control" >
                     </div>
                   </div>
 
