--- a/custom/form/pemeriksaan-fisik.html
+++ b/custom/form/pemeriksaan-fisik.html
@@ -31,13 +31,13 @@
 <div class="form-group row">
         <label class="col-md-4 col-form-label" for="berat_badan">Berat Badan</label>
         <div class="col-md-8">
-          <input id="berat_badan" name="berat_badan" type="number" placeholder="kg" class="form-control" required="">
+          <input id="berat_badan" name="berat_badan" type="number" placeholder="kg" class="form-control" >
         </div>
       </div>
 <div class="form-group row">
         <label class="col-md-4 col-form-label" for="tinggi_badan">Tinggi Badan Badan</label>
         <div class="col-md-8">
-          <input id="tinggi_badan" name="tinggi_badan" type="number" placeholder="cm" class="form-control" required="">
+          <input id="tinggi_badan" name="tinggi_badan" type="number" placeholder="cm" class="form-control" >
         </div>
       </div>
 
@@ -60,25 +60,25 @@
 <div class="form-group row">
         <label class="col-md-4 col-form-label" for="berat_badan">Tensi(mmHg)</label>
         <div class="col-md-8">
-          <input id="tensi" name="tensi" type="text" placeholder="aa/bb" class="form-control" required="">
+          <input id="tensi" name="tensi" type="text" placeholder="aa/bb" class="form-control" >
         </div>
       </div>
 <div class="form-group row">
       <label class="col-md-4 col-form-label" for="nadi">Nadi</label>
         <div class="col-md-8">
-          <input id="nadi" name="nadi" type="number" placeholder="x/menit" class="form-control" required="">
+          <input id="nadi" name="nadi" type="number" placeholder="x/menit" class="form-control" >
         </div>
       </div>
 <div class="form-group row">
       <label class="col-md-4 col-form-label" for="respirasi">Respirasi</label>
         <div class="col-md-8">
-          <input id="respirasi" name="respirasi" type="number" placeholder="x/menit" class="form-control" required="">
+          <input id="respirasi" name="respirasi" type="number" placeholder="x/menit" class="form-control" >
         </div>
       </div>
 <div class="form-group row">
       <label class="col-md-4 col-form-label" for="suhu">Suhu</label>
         <div class="col-md-8">
-          <input id="suhu" name="suhu" type="number" placeholder="C" class="form-control" required="">
+          <input id="suhu" name="suhu" type="number" placeholder="C" class="form-control" >
         </div>
       </div>
       <br>
@@ -88,7 +88,7 @@
       <div class="form-group row">
               <label class="col-md-4 col-form-label" for="butawarna">Buta Warna</label>
               <div class="col-md-8">
-                <select id="butawarna" name="butawarna" class="form-control" required="">
+                <select id="butawarna" name="butawarna" class="form-control" >
                   <option value="Ya">Ya</option>
                   <option value="Tidak">Tidak</option>
                 </select>
@@ -97,13 +97,13 @@
             <div class="form-group row">
               <label class="col-md-4 col-form-label" for="konjunctiva">Konjunctiva</label>
               <div class="col-md-8">
-                <input id="konjunctiva" name="konjunctiva" type="text" placeholder="" class="form-control" required="">
+                <input id="konjunctiva" name="konjunctiva" type="text" placeholder="" class="form-control" >
               </div>
             </div>
       <div class="form-group row">
       <label class="col-md-4 col-form-label" for="sclera">Sclera</label>
               <div class="col-md-8">
-                <select id="sclera" name="sclera" class="form-control" required="">
+                <select id="sclera" name="sclera" class="form-control" >
                   <option value="Ikterik">Ikterik</option>
                   <option value="Tidak_Ikterik">Tidak Ikterik</option>
                 </select>
@@ -112,7 +112,7 @@
       <div class="form-group row">
               <label class="col-md-4 col-form-label" for="palpebra">Palpebra</label>
               <div class="col-md-8">
-                <select id="palpebra" name="palpebra" class="form-control" required="">
+                <select id="palpebra" name="palpebra" class="form-control" >
                   <option value="Normal">Normal</option>
                   <option value="Tidak Normal">Tidak Normal</option>
                 </select>
@@ -121,7 +121,7 @@
       <div class="form-group row">
           <label class="col-md-4 col-form-label" for="refleks_cahaya">Refleks Cahaya</label>
               <div class="col-md-8">
-                <select id="refleks_cahaya" name="refleks_cahaya" class="form-control" required="">
+                <select id="refleks_cahaya" name="refleks_cahaya" class="form-control" >
                   <option value="+/+">+/+</option>
                   <option value="+/-">+/-</option>
                   <option value="-/+">-/+</option>
@@ -134,19 +134,19 @@
           <div class="form-group row">
             <label class="col-md-4 col-form-label" for="od">OD</label>
             <div class="col-md-8">
-              <textarea id="od" name="od" class="form-control" required=""></textarea>
+              <textarea id="od" name="od" class="form-control" ></textarea>
             </div>
           </div>
           <div class="form-group row">
             <label class="col-md-4 col-form-label" for="os">OS</label>
             <div class="col-md-8">
-              <textarea id="os" name="os" class="form-control" required=""></textarea>
+              <textarea id="os" name="os" class="form-control" ></textarea>
             </div>
           </div>
           <div class="form-group row">
             <label class="col-md-4 col-form-label" for="catatan">Catatan</label>
             <div class="col-md-8">
-              <input id="catatan" name="catatan" type="text" placeholder="" class="form-control" required="">
+              <input id="catatan" name="catatan" type="text" placeholder="" class="form-control" >
             </div>
           </div>
           <br>
@@ -156,7 +156,7 @@
       <div class="form-group row">
               <label class="col-md-4 col-form-label" for="faring">Faring</label>
               <div class="col-md-8">
-                <select id="faring" name="faring" class="form-control" required="">
+                <select id="faring" name="faring" class="form-control" >
                   <option value="hiperemis -">hiperemis (-)</option>
                   <option value="hiperemis +">hiperemis (+)</option>
                 </select>
@@ -165,7 +165,7 @@
       <div class="form-group row">
               <label class="col-md-4 col-form-label" for="tonsil">Tonsil</label>
               <div class="col-md-8">
-                <select id="tonsil" name="tonsil" class="form-control" required="">
+                <select id="tonsil" name="tonsil" class="form-control" >
                   <option value="Ada Pembesaran">Ada Pembesaran</option>
                   <option value="Tidak Ada Pembesaran">Tidak Ada Pembesaran</option>
                 </select>
@@ -174,7 +174,7 @@
       <div class="form-group row">
               <label class="col-md-4 col-form-label" for="gigi">Gigi</label>
               <div class="col-md-8">
-                <select id="gigi" name="gigi" class="form-control" required="">
+                <select id="gigi" name="gigi" class="form-control" >
                   <option value="Terawat">Terawat</option>
                   <option value="Tidak Terawat">Tidak Terawat</option>
                 </select>
@@ -190,7 +190,7 @@
       <div class="form-group row">
               <label class="col-md-4 col-form-label" for="kgb">Pembesaran KGB</label>
               <div class="col-md-8">
-                <select id="kgb" name="kgb" class="form-control" required="">
+                <select id="kgb" name="kgb" class="form-control" >
                   <option value="Ada Pembengkakan">Ada Pembengkakan</option>
                   <option value="Tidak Ada Pembengkakan">Tidak Ada (normal)</option>
                 </select>
@@ -199,7 +199,7 @@
             <div class="form-group row">
               <label class="col-md-4 col-form-label" for="tyroid">Pembesaran Tyroid</label>
               <div class="col-md-8">
-                <select id="tyroid" name="tyroid" class="form-control" required="">
+                <select id="tyroid" name="tyroid" class="form-control" >
                   <option value="Ada Pembengkakan">Ada Pembengkakan</option>
                   <option value="Tidak Ada Pembengkakan">Tidak Ada (normal)</option>
                 </select>
@@ -215,7 +215,7 @@
       <div class="form-group row">
               <label class="col-md-4 col-form-label" for="tympani">Membran Tympani</label>
               <div class="col-md-8">
-                <select id="tympani" name="tympani" class="form-control" required="">
+                <select id="tympani" name="tympani" class="form-control" >
                   <option value="Intak (Normal)">Intak (Normal)</option>
                   <option value="Tidak Normal">Tidak Normal</option>
                 </select>
@@ -224,7 +224,7 @@
       <div class="form-group row">
               <label class="col-md-4 col-form-label" for="prope">Serumen Prope</label>
               <div class="col-md-8">
-                <select id="prope" name="prope" class="form-control" required="">
+                <select id="prope" name="prope" class="form-control" >
                   <option value="Ada">Ada</option>
                   <option value="Tidak Ada">Tidak Ada (normal)</option>
                 </select>
@@ -233,7 +233,7 @@
       <div class="form-group row">
               <label class="col-md-4 col-form-label" for="infeksi">Infeksi</label>
               <div class="col-md-8">
-                <select id="infeksi" name="infeksi" class="form-control" required="">
+                <select id="infeksi" name="infeksi" class="form-control" >
                   <option value="Ada">Ada</option>
                   <option value="Tidak Ada (Normal)">Tidak Ada (normal)</option>
                 </select>
