--- a/tambahan/form/identitas.html
+++ b/tambahan/form/identitas.html
@@ -31,28 +31,28 @@
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="nama">Nama </label>
         <div class="col-md-8">
-          <input id="nama" name="nama" type="text" placeholder="" class="form-control" required="">
+          <input id="nama" name="nama" type="text" placeholder="" class="form-control" >
         </div>
       </div>
       
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="rm">No RM </label>
         <div class="col-md-8">
-          <input id="rm" name="rm" type="text" placeholder="xx-xx-xx" class="form-control" required="">
+          <input id="rm" name="rm" type="text" placeholder="xx-xx-xx" class="form-control" >
         </div>
       </div>
 
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="tgl_lahir">Tanggal Lahir</label>
         <div class="col-md-8">
-          <input id="tgl_lahir" name="tgl_lahir" type="date" placeholder="" class="form-control" required="">
+          <input id="tgl_lahir" name="tgl_lahir" type="date" placeholder="" class="form-control" >
         </div>
       </div>
 
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="jenis_kelamin">Jenis Kelamin</label>
         <div class="col-md-8">
-          <select id="jenis_kelamin" name="jenis_kelamin" class="form-control" required="">
+          <select id="jenis_kelamin" name="jenis_kelamin" class="form-control" >
             <option value="laki-laki">Laki-laki</option>
             <option value="perempuan">Perempuan</option>
           </select>
@@ -63,14 +63,14 @@
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="tanggal">Tanggal Pemeriksaan</label>
         <div class="col-md-8">
-          <input id="tanggal" name="tanggal" type="date" placeholder="" class="form-control" required="">
+          <input id="tanggal" name="tanggal" type="date" placeholder="" class="form-control" >
         </div>
       </div>
 
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="penjamin">Penjamin</label>
         <div class="col-md-8">
-          <select id="penjamin" name="penjamin" class="form-control" required="">
+          <select id="penjamin" name="penjamin" class="form-control" >
             <option value="pribadi">Pribadi</option>
             <option value="asuransi">Asuransi</option>
           </select>
@@ -94,7 +94,7 @@
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="usia">Usia</label>
         <div class="col-md-8">
-          <input id="usia" name="usia" type="text" placeholder="xx tahun yy bulan" class="form-control" required="" readonly>
+          <input id="usia" name="usia" type="text" placeholder="xx tahun yy bulan" class="form-control"  readonly>
         </div>
       </div>
 
