change form "tambahan"

--- a/tambahan/form/anamnesa.html
+++ b/tambahan/form/anamnesa.html
@@ -54,6 +54,7 @@
   <label class="col-md-4 col-form-label" for="merokok">Merokok</label>
   <div class="col-md-8">
     <select id="merokok" name="merokok" class="form-control" >
+      <option value="">Pilih...</option>
       <option value="ya">Ya</option>
       <option value="tidak">Tidak</option>
     </select>
@@ -64,6 +65,7 @@
   <label class="col-md-4 col-form-label" for="alkohol">Alkohol</label>
   <div class="col-md-8">
     <select id="alkohol" name="alkohol" class="form-control" >
+      <option value="">Pilih...</option>
       <option value="ya">Ya</option>
       <option value="tidak">Tidak</option>
     </select>
@@ -74,6 +76,7 @@
   <label class="col-md-4 col-form-label" for="obat">Obat - obatan</label>
   <div class="col-md-8">
     <select id="obat" name="obat" class="form-control" >
+      <option value="">Pilih...</option>
       <option value="ya">Ya</option>
       <option value="tidak">Tidak</option>
     </select>
@@ -84,6 +87,7 @@
   <label class="col-md-4 col-form-label" for="olahraga">Olahraga</label>
   <div class="col-md-8">
     <select id="olahraga" name="olahraga" class="form-control" >
+      <option value="">Pilih...</option>
       <option value="jarang">Jarang</option>
       <option value="sering">Sering</option>
       <option value="rutin">Rutin</option>
