change form "tambahan - custom"

--- a/custom/form/identitas.html
+++ b/custom/form/identitas.html
@@ -87,7 +87,7 @@
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="paket">Paket</label>
         <div class="col-md-8">
-          <input id="paket" name="paket" type="text" placeholder="Standart" value="Standart" class="form-control" readonly>
+          <input id="paket" name="paket" type="text" placeholder="Custom" value="Custom" class="form-control" readonly>
         </div>
       </div>
 
