--- a/custom/form/pemeriksaan-fisik.html
+++ b/custom/form/pemeriksaan-fisik.html
@@ -89,6 +89,7 @@
               <label class="col-md-4 col-form-label" for="butawarna">Buta Warna</label>
               <div class="col-md-8">
                 <select id="butawarna" name="butawarna" class="form-control" >
+                  <option value="">Pilih...</option>
                   <option value="Ya">Ya</option>
                   <option value="Tidak">Tidak</option>
                 </select>
@@ -104,6 +105,7 @@
       <label class="col-md-4 col-form-label" for="sclera">Sclera</label>
               <div class="col-md-8">
                 <select id="sclera" name="sclera" class="form-control" >
+                  <option value="">Pilih...</option>
                   <option value="Ikterik">Ikterik</option>
                   <option value="Tidak_Ikterik">Tidak Ikterik</option>
                 </select>
@@ -113,6 +115,7 @@
               <label class="col-md-4 col-form-label" for="palpebra">Palpebra</label>
               <div class="col-md-8">
                 <select id="palpebra" name="palpebra" class="form-control" >
+                  <option value="">Pilih...</option>
                   <option value="Normal">Normal</option>
                   <option value="Tidak Normal">Tidak Normal</option>
                 </select>
@@ -122,6 +125,7 @@
           <label class="col-md-4 col-form-label" for="refleks_cahaya">Refleks Cahaya</label>
               <div class="col-md-8">
                 <select id="refleks_cahaya" name="refleks_cahaya" class="form-control" >
+                  <option value="">Pilih...</option>
                   <option value="+/+">+/+</option>
                   <option value="+/-">+/-</option>
                   <option value="-/+">-/+</option>
@@ -157,6 +161,7 @@
               <label class="col-md-4 col-form-label" for="faring">Faring</label>
               <div class="col-md-8">
                 <select id="faring" name="faring" class="form-control" >
+                  <option value="">Pilih...</option>
                   <option value="hiperemis -">hiperemis (-)</option>
                   <option value="hiperemis +">hiperemis (+)</option>
                 </select>
@@ -166,6 +171,7 @@
               <label class="col-md-4 col-form-label" for="tonsil">Tonsil</label>
               <div class="col-md-8">
                 <select id="tonsil" name="tonsil" class="form-control" >
+                  <option value="">Pilih...</option>
                   <option value="Ada Pembesaran">Ada Pembesaran</option>
                   <option value="Tidak Ada Pembesaran">Tidak Ada Pembesaran</option>
                 </select>
@@ -175,6 +181,7 @@
               <label class="col-md-4 col-form-label" for="gigi">Gigi</label>
               <div class="col-md-8">
                 <select id="gigi" name="gigi" class="form-control" >
+                  <option value="">Pilih...</option>
                   <option value="Terawat">Terawat</option>
                   <option value="Tidak Terawat">Tidak Terawat</option>
                 </select>
@@ -191,6 +198,7 @@
               <label class="col-md-4 col-form-label" for="kgb">Pembesaran KGB</label>
               <div class="col-md-8">
                 <select id="kgb" name="kgb" class="form-control" >
+                  <option value="">Pilih...</option>
                   <option value="Ada Pembengkakan">Ada Pembengkakan</option>
                   <option value="Tidak Ada Pembengkakan">Tidak Ada (normal)</option>
                 </select>
@@ -200,6 +208,7 @@
               <label class="col-md-4 col-form-label" for="tyroid">Pembesaran Tyroid</label>
               <div class="col-md-8">
                 <select id="tyroid" name="tyroid" class="form-control" >
+                  <option value="">Pilih...</option>
                   <option value="Ada Pembengkakan">Ada Pembengkakan</option>
                   <option value="Tidak Ada Pembengkakan">Tidak Ada (normal)</option>
                 </select>
@@ -216,6 +225,7 @@
               <label class="col-md-4 col-form-label" for="tympani">Membran Tympani</label>
               <div class="col-md-8">
                 <select id="tympani" name="tympani" class="form-control" >
+                  <option value="">Pilih...</option>
                   <option value="Intak (Normal)">Intak (Normal)</option>
                   <option value="Tidak Normal">Tidak Normal</option>
                 </select>
@@ -225,6 +235,7 @@
               <label class="col-md-4 col-form-label" for="prope">Serumen Prope</label>
               <div class="col-md-8">
                 <select id="prope" name="prope" class="form-control" >
+                  <option value="">Pilih...</option>
                   <option value="Ada">Ada</option>
                   <option value="Tidak Ada">Tidak Ada (normal)</option>
                 </select>
@@ -234,6 +245,7 @@
               <label class="col-md-4 col-form-label" for="infeksi">Infeksi</label>
               <div class="col-md-8">
                 <select id="infeksi" name="infeksi" class="form-control" >
+                  <option value="">Pilih...</option>
                   <option value="Ada">Ada</option>
                   <option value="Tidak Ada (Normal)">Tidak Ada (normal)</option>
                 </select>
