add flag to preeemployee pria

--- a/preemployee/pria/form/costovertebra.html
+++ b/preemployee/pria/form/costovertebra.html
@@ -37,7 +37,7 @@
 <div class="form-group row">
   <label class="col-md-4 col-form-label" for="jantung-auskultasi">Auskultasi Jantung</label>
   <div class="col-md-8">
-    <textarea id="jantung-auskultasi" name="Auskultasi Jantung" placeholder="" class="form-control" required="" rows="4"></textarea>
+    <textarea id="jantung-auskultasi" name="jantung-auskultasi" placeholder="" class="form-control" required="" rows="4"></textarea>
   </div>
 </div>
 
@@ -83,14 +83,14 @@
                 </div>
 
       <div class="form-group row">
-                <label class="col-md-4 col-form-label" for="ekstremitas-atas"><h5>Ekstremitas Atas</h5></label>
+                <label class="col-md-4 col-form-label" for="ekstremitas-atas">Ekstremitas Atas</label>
                   <div class="col-md-8">
                     <textarea id="ektremitas-atas" name="ekstremitas-atas" class="form-control" required=""></textarea>
                   </div>
                </div>
 
       <div class="form-group row">
-                <label class="col-md-4 col-form-label" for="ekstremitas-bawah"><h5>Ekstremitas Bawah</h5></label>
+                <label class="col-md-4 col-form-label" for="ekstremitas-bawah">Ekstremitas Bawah</label>
                   <div class="col-md-8">
                     <textarea id="ektremitas-bawah" name="ekstremitas-bawah" class="form-control" required=""></textarea>
                   </div>
