--- a/preemployee/pria/form/laboratorium.html
+++ b/preemployee/pria/form/laboratorium.html
@@ -83,7 +83,7 @@
               </div>
             </div>
            <div class="form-group row">
-                   <label class="col-md-4 col-form-label" for="gds"><h5>Gula Darah Sewaktu</h5></label>
+                   <label class="col-md-4 col-form-label" for="gds">Gula Darah Sewaktu</label>
                    <div class="col-md-8">
                      <input id="gds" name="gds" type="number" placeholder="g/dl" class="form-control" required="">
                    </div>
@@ -96,7 +96,7 @@
                          </div>
                        </div>
                  <div class="form-group row">
-                    <label class="col-md-4 col-form-label" for="urinalisa"><h5>Urinalisa</h5></label>
+                    <label class="col-md-4 col-form-label" for="urinalisa">Urinalisa</label>
                     <div class="col-md-8">
                       <input id="urinalisa" name="urinalisa" type="number" placeholder="pH" class="form-control" required="">
                     </div>
