Add Flag to Pre E Wanita

--- a/preemployee/wanita/form/laboratorium.html
+++ b/preemployee/wanita/form/laboratorium.html
@@ -96,13 +96,13 @@
                          </div>
                        </div>
                  <div class="form-group row">
-                    <label class="col-md-4 col-form-label" for="urinalisa"><h5>Urinalisa</h5></label>
+                    <label class="col-md-4 col-form-label" for="urinalisa">Urinalisa</label>
                     <div class="col-md-8">
                       <input id="urinalisa" name="urinalisa" type="number" placeholder="pH" class="form-control" required="">
                     </div>
                   </div>
                   <div class="form-group row">
-                    <label class="col-md-4 col-form-label" for="gravidex"><h5>Gravidex Test</h5></label>
+                    <label class="col-md-4 col-form-label" for="gravidex">Gravidex Test</label>
                     <div class="col-md-8">
                       <input id="gravidex" name="gravidex" type="text" placeholder="g/dl" class="form-control" required="">
                     </div>
