add flag to Hidup Sehat

--- a/hidup sehat/form/laboratorium.html
+++ b/hidup sehat/form/laboratorium.html
@@ -30,31 +30,31 @@
 
     <h5>Darah Lengkap</h5>
     <div class="form-group row">
-            <label class="col-md-4 col-form-label" for="hemoglobin">Hemoglobin (g/dl)</label>
+            <label class="col-md-4 col-form-label" for="hemoglobin">Hemoglobin</label>
             <div class="col-md-8">
               <input id="hemoglobin" name="hemoglobin" type="number" placeholder="g/dl" class="form-control" required="">
             </div>
           </div>
     <div class="form-group row">
-          <label class="col-md-4 col-form-label" for="hematokrit">Hematokrit (%)</label>
+          <label class="col-md-4 col-form-label" for="hematokrit">Hematokrit</label>
             <div class="col-md-8">
               <input id="hematokrit" name="hematokrit" type="number" placeholder="" class="form-control" required="">
             </div>
           </div>
     <div class="form-group row">
-            <label class="col-md-4 col-form-label" for="trombosit">Trombosit (µL)</label>
+            <label class="col-md-4 col-form-label" for="trombosit">Trombosit</label>
             <div class="col-md-8">
               <input id="trombosit" name="trombosit" type="number" placeholder="µL" class="form-control" required="">
             </div>
           </div>
     <div class="form-group row">
-          <label class="col-md-4 col-form-label" for="leukosit">Leukosit (µL)</label>
+          <label class="col-md-4 col-form-label" for="leukosit">Leukosit</label>
             <div class="col-md-8">
               <input id="leukosit" name="leukosit" type="number" placeholder="µL" class="form-control" required="">
             </div>
           </div>
           <div class="form-group row">
-            <label class="col-md-4 col-form-label" for="led">LED (mm/jam)</label>
+            <label class="col-md-4 col-form-label" for="led">LED</label>
             <div class="col-md-8">
               <input id="led" name="led" type="number" placeholder="mm/jam" class="form-control" required="">
             </div>
@@ -72,19 +72,19 @@
             </div>
           </div>
     <div class="form-group row">
-          <label class="col-md-4 col-form-label" for="MCV">MCV (fl)</label>
+          <label class="col-md-4 col-form-label" for="MCV">MCV</label>
             <div class="col-md-8">
               <input id="MCV" name="MCV" type="number" placeholder="fl" class="form-control" required="">
             </div>
           </div>
     <div class="form-group row">
-            <label class="col-md-4 col-form-label" for="MCH">MCH (pg)</label>
+            <label class="col-md-4 col-form-label" for="MCH">MCH</label>
               <div class="col-md-8">
                 <input id="MCH" name="MCH" type="number" placeholder="pg" class="form-control" required="">
               </div>
             </div>
            <div class="form-group row">
-                   <label class="col-md-4 col-form-label" for="gds"><h5>Gula Darah Sewaktu (g/dl)</h5></label>
+                   <label class="col-md-4 col-form-label" for="gds">Gula Darah Sewaktu</label>
                    <div class="col-md-8">
                      <input id="gds" name="gds" type="number" placeholder="g/dl" class="form-control" required="">
                    </div>
