--- a/hidup sehat/form/pemeriksaan-fisik.html
+++ b/hidup sehat/form/pemeriksaan-fisik.html
@@ -84,11 +84,11 @@
 <div>
 
   <div class="form-group row">
-    <label class="col-md-4 col-form-label" for="hasil-konsul">Hasil Konsul</label>
-      <div class="col-md-8">
-        <input id="hasil-konsul" name="hasil-konsul" type="textarea" placeholder="" class="form-control" required="">
-      </div>
+    <label class="col-md-4 col-form-label" for="keluhan">Hasil Konsul</label>
+    <div class="col-md-8">
+      <textarea id="hasil-konsul" name="hasil-konsul" placeholder="" class="form-control" required="" rows="4"></textarea>
     </div>
+  </div>
     <br>
 <div>
     </fieldset>
