update for standart

--- a/standart/form/costovertebra.html
+++ b/standart/form/costovertebra.html
@@ -35,9 +35,9 @@
             </div>
           </div>
 <div class="form-group row">
-  <label class="col-md-4 col-form-label" for="jantung-auskultasi">Auskultasi Jantung</label>
+  <label class="col-md-4 col-form-label" for="jantung-auskultasi">Auskultasi</label>
   <div class="col-md-8">
-    <textarea id="jantung-auskultasi" name="Auskultasi Jantung" placeholder="" class="form-control" required="" rows="4"></textarea>
+    <textarea id="jantung-auskultasi" name="jantung-auskultasi" placeholder="" class="form-control" required="" rows="4"></textarea>
   </div>
 </div>
 
